feat: change procedure README.md, add div elements into DOM with 'createElement' and 'appendChild', use correct classes for colors in if statement

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     
+    <div class="container">
+        
+    </div>
 
     <!-- custom js -->
     <script src="./assets/js/script.js"></script>
